--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/js/jquery.range.js": "/js/jquery.range.js"
+    "/js/jquery.range.js": "/js/jquery.range.js",
+    "/css/app.css": "/css/app.css"
 }
